--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
   <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <h3>{{ site.title }}</h3>
+  <h3 class="blog-title">{{ site.title }}</h3>
   <div>
-    <ul>
+    <ul class="nav-item">
       <li><a href="/">Home</a></li>
     </ul>
   </div>
