--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,78 @@
-#kitten {
-  height: 100px;
+body {
+  background: url("http://www.onekingproductions.com/wp-content/uploads/2011/04/Genesis_Energy_Theatre_Seats_and_stage-1024x768.jpg");
+  background-size: cover;
+  background-color: rgb(69, 69, 69);
+}
+
+p, h1 {
+  color: white;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#playbill {
+  float: left;
+  margin: 10px;
+}
+
+.speech {
+  background-color: rgba(138, 138, 138, 0.5);
+  color: white;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: times;
+  word-wrap: normal;
+}
+
+.stage-direction{
+  font-style: italic;
+  font-weight: bolder;
+}
+
+.blog-title{
+  text-align: center;
+  color: white;
+  font-family: cursive;
+}
+
+.nav-item{
+  list-style-type: none;
+  text-align: center;
+  color: lightblue;
+  font-family: serif;
+}
+
+#footer-contact {
+  position: relative;
+  top: auto;
+  left:auto;
+  background-color: rgba(150, 150, 150, 0.75);
+  color: black;
+  text-align: center;
+  width: 20%;
+
+}
+
+.spoiler {
+  color: black;
+  background-color: black;
+}
+
+.spoiler:hover {
+  color: white;
+  background-color: transparent;
+}
+
+.date {
+  color: grey;
+}
+
+a:link {
+  color: rgb(0, 0, 255)
+}
+
+a:visited {
+  color: rgb(135, 0, 255)
 }
